--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"author": "Andrew Munsell <andrew@wizardapps.net>",
 
 	"dependencies": {
-		"socket.io": ">=0.9.0",
+		"socket.io": "~0.9.0",
 		"tinycolor2": ">=0.9.9",
 		"easing": ">=0.0.3",
 		"raspberrypixels": "*",
