--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"socket.io": "~0.9.0",
 		"tinycolor2": ">=0.9.9",
 		"easing": ">=0.0.3",
+		"spi": ">=0.2.0",
 		"raspberrypixels": "*",
 		"bindings": "*"
 	}
